# password-presets

./: .gitignore  LICENSE  README.md  package.json
js/: README.md  crypto.js  generate.js  index.d.ts  index.js  index.test.js  inspect.js  package.json  password-presets.js  presets.js  wordlist.js
py/: README.md  pyproject.toml
py/password_presets/: __init__.py  __main__.py  generate.py  inspect_.py  presets.py  wordlist.py
tests/: test_password_presets.py
